--- a/src/Components/Looder/Looder.css
+++ b/src/Components/Looder/Looder.css
@@ -27,3 +27,10 @@
   font-weight: 600;
   font-size: 26px;
 }
+
+@media (max-width: 450px)
+{
+  .typewriter-container{
+    font-size: 16px;
+  }
+}
