--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,8 @@
+body
+{
+  background-color: var(--general-color);
+}
 main
 {
   width: 100%;
-  height: 100vh;
-  background-color: var(--general-color);
-  background-color: #1b0000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-h1
-{
-  color: var(--Text-color);
-  font-family: var(--general-Font);
 }
