--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,7 @@ body
 }
 main
 {
+  /* background: linear-gradient(rgb(94, 99, 145) , black); */
+  background: linear-gradient(#010101 , #010101);
   width: 100%;
 }
