--- a/src/Components/ContactUs/Contact.css
+++ b/src/Components/ContactUs/Contact.css
@@ -1,49 +1,101 @@
-.contact-us-page {  
-  width: 100%;  
-  display: flex;  
-  justify-content: space-evenly;  
-  align-items: flex-start; 
-  padding: 20px;  
-  /* background: linear-gradient(#010101 , rgb(51, 51, 51));   */
-  border-radius: 8px;  
+.Get-In-Touch {  
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  height: 100px; 
+  margin-bottom: 50px;
 }  
 
-.form-container, .connect-container {  
-  flex: 1;  
-  max-width: 50%; 
+.get {  
+  text-align: center; 
+  border: 2px solid white;
+  padding: 30px;
+} 
+
+.parant { 
+
+  height: 182px;
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+  margin-bottom: 70px;
+  
+}
+
+.children { 
+  width: 285px;
+  height: 158px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+}
+.children p { 
+  width: 255px;
+  height: 24px;
+}
+
+
+.contact-us-page {  
+  width: 100%;  
+  height: 573px;
+  display: flex;  
+  justify-content: space-around;
+  padding: 20px;  
+  /* background: linear-gradient(#010101 , rgb(51, 51, 51));   */
+ padding-left:  115px; 
+  
+}  
+
+.form-container {  
+  
+  width: 760px; 
+  height: 525px;
   margin: 0 10px;  
 }  
 
 h2 {  
-  text-align: center;  
+  text-align: start;  
   color: #c2b4b4;  
+  margin-bottom: 20px;
 }  
+
+.Name-email { 
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+  width: 100%;
+
+}
+
+.Name-email .form-group{ 
+   width: 380px;
+   height: 99px;
+}
 
 .form-group {  
   margin-bottom: 15px;  
+
 }  
 
-label {  
-  display: block;  
-  margin-bottom: 5px;  
-}  
 
 input, textarea {  
   width: 100%;  
   padding: 10px;  
-  border: 1px solid #ccc;  
-  border-radius: 4px;  
+ border: none;
   background: rgba(51, 51, 51, 0.8); 
   color: white;  
+  margin-top: 10px;
+  
 }  
 
 textarea {  
-  resize: none;  
   height: 100px; 
 }  
 
 .submit-button {  
-  width: 100%;  
+  width: 40%;  
+  height: 50px;
   padding: 10px;  
   background: rgb(117, 107, 107); 
   color: white; 
@@ -59,29 +111,34 @@ textarea {
 
 .connect-container {  
   margin-top: 8px; 
+  width: 380px;
+  height: 525px;
+
 }  
+
 
 .social-icons {  
   display: flex;  
   flex-direction: column;   
-  align-items: center;    
+  align-items: center;
    width: 100%;
    gap: 10px; 
  
 }  
 
 .social-icon {  
+  width: 350px ;
+  height: 48px;
   text-decoration: none;  
-  font-size: 30px;  
+  font-size: 15px;  
   display: flex;  
   align-items: center;  
-  justify-content: space-between;  
-  margin: 20px 0;
+  margin: 15px 0;
 }  
 
 .icon-circle {  
-  width: 50px;            
-  height: 50px;           
+  width: 48px;            
+  height: 48px;           
   border: 2px solid #ccc;  
   border-radius: 50%;      
   display: flex;  
