--- a/src/Components/ContactUs/Contact.css
+++ b/src/Components/ContactUs/Contact.css
@@ -14,10 +14,10 @@
   margin: 0 10px;  
 }  
 
-h2 {  
+/* h2 {  
   text-align: center;  
   color: #c2b4b4;  
-}  
+}   */
 
 .form-group {  
   margin-bottom: 15px;  
