--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -1,13 +1,14 @@
 .About-me
 {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   padding: 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
   gap: 50px;
+  color: var(--Text-color);
 }
 .About-me img{
   width: 400px;
