--- a/src/Components/ContactUs/Contact.css
+++ b/src/Components/ContactUs/Contact.css
@@ -53,14 +53,12 @@
   height: 525px;
   margin: 0 10px;  
 }  
-
+ 
 /* h2 {  
-  text-align: center;  
-h2 {  
   text-align: start;  
   color: #c2b4b4;  
   margin-bottom: 20px;
-}  
+}   */
 
 .Name-email { 
   display: flex;
