--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -35,11 +35,11 @@
     font-size: 48px;  
     margin-bottom: 10px;  
 }  
-
+/* 
 h2 {  
     font-size: 38px;  
     margin-bottom: 30px;  
     color: #333;  
     font-family: 'Arial', sans-serif;  
     text-align: center;
-}
+} */
