--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -1,5 +1,6 @@
 .portfolio {   
   padding: 10px;
+  color: var(--Text-color);
 
 }  
 .portfolio h2 , h1  {   
@@ -10,25 +11,26 @@
 .slider {  
   display: flex;  
   align-items: center;  
-  justify-content: space-between;  
+  justify-content: space-around;  
+  position: relative;
 }  
 
 .work-container {  
   display: flex;   
   justify-content: center;   
   align-items: center;  
-  width: 90%;
+  width: 80%;
   height: 500px;   
   overflow: hidden;  
 }  
 
 .work-item {  
-  width: 50%; 
+  width: 400px; 
   height: 90%;   
-  margin: 0 10px;  
+  margin: 0 20px;  
   text-align: left;  
-  border: 2px solid #c91010;  
-  padding: 10px;  
+  border: 2px solid var(--Text-color);  
+  box-shadow: 0px 0px 9px .1px var(--Text-color);
   border-radius: 5px;  
   background-image: url('./background.jpg'); 
   background-size: cover; 
@@ -37,11 +39,19 @@
   display: flex; 
   flex-direction: column; 
   justify-content: flex-end; 
-  padding: 20px;  
   cursor: pointer; 
-  transition: transform 0.3s ease, box-shadow 0.3s ease; 
+  transition: transform 0.3s ease; 
+  position: relative;
 }  
-
+.work-item img {
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+}
+.work-item h3 , .work-item p{
+  z-index: 10;
+}
 .work-item:hover {   
   transform: scale(1.05) rotate(2deg); 
 
@@ -50,14 +60,55 @@
 .arrow {  
   cursor: pointer;  
   background-color: transparent;  
-  border: 5px solid red;   
+  border: 5px solid var(--Text-color);   
   color: white;  
   font-size: 40px;  
   padding: 5px;  
   border-radius: 50%;  
 }  
+.arrow h5 {
+  margin-top: -4px;
+}
 
 .arrow:disabled {  
   color: #ccc;  
   cursor: not-allowed;  
 }
+
+
+@media (max-width : 950px)
+{
+  .work-item {  
+    width: 100%; 
+    height: 80%;   
+  }  
+}
+
+@media (max-width : 599px)
+{
+  .work-container
+  {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .work-item {  
+    width: 100%; 
+    height: 70%;   
+  }  
+
+  .arrow.arrow1
+  {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-120%);
+  }
+  .arrow.arrow2
+  {
+    position: absolute;
+    bottom: 0;
+    right: 50%;
+    transform: translateX(120%);
+  }
+}
+
