--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -1,10 +1,15 @@
+.Skills-sec
+{
+    margin: 50px 0px;
+}
+
 .skills-container {  
     text-align: center;  
     padding: 40px;  
-    background-color: #f5f5f5;  
+    background-color: transparent;  
     border-radius: 10px;  
-    box-shadow: 0 4px 20px 4px rgb(255, 255, 255);  
-    max-width: 80%; 
+    /* box-shadow: 0 4px 20px 4px rgb(255, 255, 255);   */
+    width: 90%; 
     margin: 40px auto; 
 }  
 
@@ -16,7 +21,7 @@
 }  
 
 .skill-card {  
-    background-color: #ffffff;  
+    background-color: #111111;  
     border: 1px solid #ddd;  
     border-radius: 10px;  
     padding: 20px;  
@@ -24,7 +29,17 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);  
     transition: transform 0.2s, box-shadow 0.2s;  
     text-align: left;  
-}  
+}
+
+.skill-card h3
+{
+    color: whitesmoke;  
+}
+
+.skill-card p
+{
+    color: #5c5c5c;  
+}
 
 .skill-card:hover {  
     transform: translateY(-5px);  
@@ -34,12 +49,22 @@
 .skill-icon {  
     font-size: 48px;  
     margin-bottom: 10px;  
-}  
-/* 
-h2 {  
+    color: var(--general-color2);
+} 
+
+.Skills-sec h2 {  
     font-size: 38px;  
     margin-bottom: 30px;  
-    color: #333;  
+    color: var(--Text-color);  
     font-family: 'Arial', sans-serif;  
     text-align: center;
-} */
+} 
+
+@media (max-width:400px)
+{
+    .skills-container {  
+        padding: 20px;  
+        width: 90%; 
+        margin: 40px auto; 
+    }  
+}
