--- a/src/Components/ContactUs/Contact.css
+++ b/src/Components/ContactUs/Contact.css
@@ -1,18 +1,18 @@
 .animated-loop {
-  stroke-dasharray: 100 500; /* يتناسب مع المسار الكامل */
+  stroke-dasharray: 100 400; /* يتناسب مع المسار الكامل */
   stroke-dashoffset: 0;
-  animation: loopPath 4s linear infinite;
+  animation: loopPath 3s linear infinite;
 }
 
 @keyframes loopPath {
   to {
-    stroke-dashoffset: -600;
+    stroke-dashoffset: -500;
   }
 }
 
 .Fathar{
   margin: 50px 0px;
-  display: none;
+  /* display: none; */
 }
 
 .Get-In-Touch {  
@@ -22,6 +22,9 @@
   height: 100px;   
   margin-bottom: 50px;  
 }  
+.sd{
+  color: #ff5f5fe7;
+}
 
 .get {  
   text-align: center;   
@@ -44,7 +47,7 @@
   display: flex;  
   flex-direction: column;  
   justify-content: space-between;  
-  align-items: start;  
+  align-items: center;  
   margin: 20px 0;
 }  
 
@@ -63,13 +66,13 @@ margin-bottom: 15px;
 }  
 
 .contact-us-page {  
-  width: 100%;  
-  height: auto;  
+  width: 80%;  
+  margin: 0 auto;
   display: flex;  
-  justify-content: space-around;  
-  padding: 20px;  
-  padding-left: 115px;   
+  justify-content: space-between;  
+  padding: 20px;
   flex-wrap: wrap;  
+  gap: 30px;
 }  
 
 .form-container {  
@@ -111,7 +114,7 @@ textarea {
   width: 40%;  
   height: 50px;  
   padding: 10px;  
-  background: rgb(117, 107, 107);   
+  background: #ce0000;   
   color: white;   
   border: none;  
   border-radius: 4px;  
@@ -124,8 +127,7 @@ textarea {
 }  
 
 .connect-container {  
-  margin-top: 8px;   
-  width: 380px;  
+  margin-top: 8px;    
   height: auto;  
 }  
 
@@ -138,13 +140,14 @@ textarea {
 }  
 
 .social-icon {  
-  width: 350px ;  
+  width: 150px ;  
   height: 48px;  
   text-decoration: none;  
   font-size: 15px;  
   display: flex;  
   align-items: center;  
   margin: 15px 0;  
+  color: #ce0000;
 }  
 
 .icon-circle {  
@@ -158,14 +161,18 @@ textarea {
   background: rgba(51, 51, 51, 0.8);   
   margin-right: 10px;     
 }  
+.social-icon p{  
+  font-weight: 600;
+}
 
+@media (max-width: 1276px) {  
 
-@media (max-width: 768px) {  
     .contact-us-page {  
         padding-left: 20px; 
         padding-top: 10px;  
         flex-direction: column; 
         align-items: center; 
+
     }  
 
     .form-container {  
@@ -190,18 +197,27 @@ textarea {
     .connect-container {  
         width: 100%;
     }  
-
+    .connect-container h2{
+      text-align: center;
+    }
     .social-icons {  
         flex-direction: row; 
-        flex-wrap: wrap; 
-        justify-content: start;  
+        justify-content: center;  
     }  
 
     .social-icon {  
-        width: 80%; 
+        width: 40%; 
         max-width: 320px; 
+        justify-content: center;
+        margin-top: 20px;
     }  
 }  
+
+@media (max-width: 750px) {  
+    .social-icons {  
+        flex-wrap: wrap; 
+    }  
+}
 
 @media (max-width: 480px) {  
     h2 {  
