--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -25,21 +25,20 @@
 }  
 
 .work-item {  
-  width: 400px; 
-  height: 90%;   
+  width: 600px; 
+  height: 80%;   
   margin: 0 20px;  
   text-align: left;  
   border: 2px solid var(--Text-color);  
-  box-shadow: 0px 0px 9px .1px var(--Text-color);
+  box-shadow: 0px 0px 9px .1px black;
   border-radius: 5px;  
   background-image: url('./background.jpg'); 
   background-size: cover; 
   background-position: center;  
   color: white; 
   display: flex; 
-  flex-direction: column; 
-  justify-content: flex-end; 
-  cursor: pointer; 
+  justify-content: space-between; 
+  align-items: flex-end;
   transition: transform 0.3s ease; 
   position: relative;
 }  
@@ -51,7 +50,22 @@
 }
 .work-item h3 , .work-item p{
   z-index: 10;
+  margin-bottom: 10px;
 }
+.work-item h3
+{
+  background-color: red;
+  padding: 5px 12px;
+  border-radius: 8px;
+}
+ .work-item h3 a 
+ {
+  color: white;
+  background-color: red;
+  padding: 5px 12px;
+  border-radius: 8px;
+
+ }
 .work-item:hover {   
   transform: scale(1.05) rotate(2deg); 
 
